// Vitest Snapshot v1

exports[`TabView > renders TabView properly 1`] = `
<div>
  <div
    class="sc-bcXHqe hngVog"
  >
    <div
      class="sc-gswNZR cOzQFi"
    >
      <a
        class="sc-dkrFOg flirZo"
      >
        Tab 1
      </a>
      <a
        class="sc-dkrFOg iPkxDF"
      >
        Tab 2
      </a>
      <a
        class="sc-dkrFOg dwmmvd"
        disabled=""
      >
        Tab 3
      </a>
    </div>
    <div
      class="sc-hLBbgP dbjBHo"
    >
      <h4>
        Tab Content here
      </h4>
    </div>
  </div>
</div>
`;

exports[`TabView > shouldn't have href when disabled 1`] = `
<div>
  <div
    class="sc-bcXHqe hngVog"
  >
    <div
      class="sc-gswNZR cOzQFi"
    >
      <a
        class="sc-dkrFOg dwmmvd"
        disabled=""
      >
        Tab 1
      </a>
    </div>
    <div
      class="sc-hLBbgP dbjBHo"
    >
      <h4>
        Tab Content here
      </h4>
    </div>
  </div>
</div>
`;
